# rust-sdl2-extras

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
src/adapters/: canvas_adapter.rs  mod.rs  resource_facade.rs
src/common/: delta_time.rs  font_details.rs  game_time.rs  mod.rs  text_texture.rs
src/fspecs/: mod.rs
src/fspecs/extensions/: mod.rs  world_ext.rs
src/managers/: font_manager.rs  mod.rs  resource_manager.rs  texture_manager.rs
