[package]
name = "sdl2-extras"
version = "0.1.4"
authors = ["Mateusz Giza <matgizq@gmail.com>"]
license = "MIT"
repository = "https://github.com/mateuszgiza/rust-sdl2-extras"
description = "Extras for Rust-SDL2 package"

[badges]
travis-ci = { repository = "mateuszgiza/rust-sdl2-extras", branch = "master" }

[dependencies]
floating-duration = "0.1.2"
specs = { version = "0.14.1", optional = true }

[dependencies.sdl2]
    version = "0.31"
    default-features = false
    features = ["ttf","image"]

[features]
fspecs = ["specs"]

[package.metadata.docs.rs]
all-features = true